# wow-talent-optimizer

./: .gitignore  main.py  pyproject.toml
optimizer/algorithms/beam_search/: __init__.py
optimizer/talents/player_choice/: __init__.py
player/: __init__.py
simc/template/: __init__.py
talents/: models.py
talents/converters/icy_veins/: __init__.py
talents/parsers/icy_veins/: models.py
